[package]
name = "nft_keys_market_contract"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
k256 = { version = "0.13.4", features = ["sha256", "ecdsa", "serde", "arithmetic", "expose-field"] }
hex = "0.4.3"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.3"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
ethabi = "18.0.0"
ethereum-types = "0.15.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sha3 = "0.10.8"
alloy-sol-types = "0.8.14"
alloy-primitives = "0.8.14"

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
