[package]
name = "nft_keys_market_contract"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy", "schemars"] }
k256 = { version = "0.13.4", features = ["sha256", "ecdsa", "serde", "arithmetic", "expose-field"] }
hex = "0.4.3"
serde_json = "1.0"
ethabi = "18.0.0"
sha3 = "0.10.8"
schemars = "0.8.21"
bitcoin = "0.32.5"
bs58 = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["custom"] }

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
